# new_ap2_full

./: .env  .gitignore  README.md  pyproject.toml
backend/: db.sqlite3
backend/administracao/: apis.py  models.py  schemas.py  views.py
backend/administracao/migrations/: 0001_initial.py
backend/core/: routers.py  settings.py  urls.py
backend/webScraping/: models.py  schemas.py  scraper.py  views.py
frontend/: app.py
