[project]
name = "ap2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-ninja>=1.4.1",
    "mysqlclient>=2.2.7",
    "ninja>=1.11.1.4",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]
